fix misalignment of navbar

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -634,7 +634,7 @@ pre tt:after {
 .wrapper {
   z-index: 10;
   position: relative;
-  padding: 3em 1em ;
+  padding: 3em 0em ;
 }
 .post-list-wrapper__many{
   display: grid;
